merges r21578 from trunk into ruby_1_9_1. * thread.c (call_trace_proc): as Matz said ([ruby-core:21183]),   should skip rb_str_new2() if rb_sourcefile() returns NULL.   rb_sourcefile() returns NULL if frame is toplevel of Fiber.   [ruby-core:21161] [Bug #985]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@21593 b2dd03c8-39d4-4d8f-98ff-823fe69b080e